syntax = "proto3";
package blog;

option java_multiple_files = true;
option java_package = "com.example.blog_grpc.proto";

message Post {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 authorId = 4;
  bool published = 5;
  int64 viewCount = 6;
}

message CreatePostRequest { int64 authorId = 1; string title = 2; string content = 3; }
message CreatePostResponse { int64 id = 1; }
message GetPostRequest { int64 id = 1; }
message ListPostsRequest { int32 page = 1; int32 size = 2; string query = 3; }
message ListPostsResponse { repeated Post posts = 1; int32 totalPages = 2; }
message PublishPostRequest { int64 id = 1; }

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost(GetPostRequest) returns (Post);
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
  rpc PublishPost(PublishPostRequest) returns (Post);
}

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
}
message CreateUserRequest { string username = 1; string email = 2; string passwordHash = 3; }
message CreateUserResponse { int64 id = 1; }
service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message Comment {
  int64 id = 1;
  int64 postId = 2;
  int64 authorId = 3;
  string content = 4;
}
message AddCommentRequest { int64 postId = 1; int64 authorId = 2; string content = 3; }
message AddCommentResponse { Comment comment = 1; }
service CommentService {
  rpc AddComment(AddCommentRequest) returns (AddCommentResponse);
}

